# StarPansharpeing_v1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  AGENTS.md  README.md  conftest.py  data  dataclass_from_dict_test.py  dataclass_inheritance_test.py  debug_robust_sampler.py  interface.py  model.safetensors  output_202510050533.jsonl  pyproject.toml  requirements.txt  requirements_312_final.txt  ruff.toml  shardindex.json  temp_test_output.txt  test_build_block.py  test_hybrid_classifier.py  test_path.py
.agent/rules/: general.md
doc/ai-history/: MR-GRPO.md  TreeSatAI 多标签分类.md  压缩方法.md
doc/benchmarks/: change_detection.md  classification.md  cloud_removal.md  generation.md  hyper_cd.md  hyper_classification.md  pansharpening.md  segmentation.md
doc/next-step/: SSLv2.md  downstreams.md  lejepa_rectified_lpjepa.md  smp_dpt_backbones.md
main/: bsq_swin_encoder.py  main.py
output/tmp_embed/62b9ab89eebb0ac5ee4d264bf96bf19d2b81f504bc3852500efeaf5a34d638b1/: system_prompt.txt
quantization/: bsq.py
scripts/: README_TEXT_ENCODING.md  __init__.py  condition_tokenize.py  cosmos_pos_train_on_hyperspetral.py  create_all_pansharpening_tars.sh  diffusive_tokenizer_on_hyperspectral.py  generative_condition_prepare.py  generative_conditions_inferencer.py  hyper_latent_denoise.py  hyper_latent_denoise_trainer.py  hyper_latent_pansharpening_trainer.py  hyperspectral_image_tokenizer_trainer.py  make_tar_webdataset_from_tiff_files.py  meanflow_generative_trainer.py  merge_tar_files.py  one_d_tokenizer_on_hyperspectral.py  pansharpening_data_simulation.py  prepare_gemma2_text_features.py  run_condition_tokenize.sh  test_acc.py  test_hydra.py
scripts/cmds/: wids_index.sh
scripts/configs/: accelerate_config.yaml  ds_config.json  pos_train.yaml
scripts/configs/1d_tokenizer/: 1d_tokenizer_no_diff_no_q_t512_d16.yaml  1d_tokenizer_no_quantizer.yaml  flowmo_no_quant_t512d16p8.yaml  flowmo_no_quant_t512p8.yaml
scripts/configs/2d_cosmos_diff/: 1d_tokenizer_no_quantizer.yaml  2d_cosmos_no_quantizer.yaml  cosmos_flow_f8c16p1.yaml  mingtok_600M_continous.yaml
scripts/configs/change_detection/: tokenizer_dinov3_adaptor.yaml  tokenizer_hybrid_adaptor.yaml  tokenizer_hybrid_adaptor_c2smsfloods.yaml  tokenizer_hybrid_adaptor_cabuar.yaml  tokenizer_hybrid_adaptor_dsifn.yaml  tokenizer_hybrid_adaptor_gvlm.yaml  tokenizer_hybrid_adaptor_levir_cd.yaml  tokenizer_hybrid_adaptor_single_mat.yaml  tokenizer_hybrid_adaptor_xview2.yaml  tokenizer_hybrid_bit_sdpa_levir_cd.yaml
scripts/configs/classification/: cosmos_eurosat_linear.yaml  cosmos_treesatai_ts_linear.yaml  cosmos_ucmerced_hybrid_linear.yaml  cosmos_ucmerced_linear.yaml  dinov3_ucmerced_linear.yaml  hypersigma_ucmerced.yaml  mae_ucmerced.yaml  omnisat_treesatai_mm.yaml  spectralgpt_ucmerced.yaml
scripts/configs/cloud_removal/: cloud_removal_cuhk_cr1.yaml  cloud_removal_cuhk_cr1_fm_x0_cloud.yaml  cloud_removal_cuhk_cr1_i2sb_x0_cloud_unet.yaml  cloud_removal_cuhk_cr1_regression_unet.yaml  cloud_removal_cuhk_cr1_regression_unet_flux_vae.yaml  cloud_removal_cuhk_cr1_regression_unet_no_vae_ps2.yaml  (+3 more)
scripts/data_prepare/: condition_tokenize.py  create_webdataset_with_text.py  generative_condition_prepare.py  make_denoise_cases.py  merge_tar_files.py  pansharpening_data_simulation.py  prepare_gemma2_text_features.py
scripts/dataset/: download_spacenet_series.py
scripts/infer/: mmdet_dior_map_infer.py  model_embedding_umap_vis.py  resisc45_class_umap_vis.py  resisc45_dinov3_umap_vis.py
scripts/tests/: _trainer_non_disc_test_utils.py  analyze_kernels.ipynb  analyze_pansharpening_max_values.py  bench_flash_adamw_vs_torch_adamw.py  fetch_houston13.ipynb  hyperspectral_cls.ipynb  ijepa_mask.ipynb  plot_pansharpening_pairs.py  test_HSI_MSI_analyser.py  test_RX.py  test_acc.py  test_acc_fsdp.py  test_adaptive_conv_cross_attn.py  test_adaptive_conv_cross_attn_benchmark.py  test_adaptive_conv_mix.py  test_adaptive_loss_fix.py  test_amotized_pansharpening.py  test_apply_ijepa_mask.py  test_arkd_loss.py  test_atlantic_forest_dataset.py  test_attention_block_moe.py  test_attrs_omegaconf.py  test_bsq_flip_aug.py  test_c2smsfloods_dataset.py  test_call_validate_callable_arguments.py  test_cd_model_cfg.py  test_cd_stage_fuse_mode.py  test_cd_unet_decoder_raw_pixel.py  test_change_detection_metrics_ignore_index.py  test_change_detection_val_label_shape.py  test_channel_drop.py  test_checkpointing.py  test_cloud_removal_diffusion_math.py  test_cloud_removal_image_condition_unet.py  test_cloud_removal_lightning_dit_conditioning.py  test_cloud_removal_sit_conditioning.py  test_condition.py  test_convnext_fusion_extractor.py  test_cosmos_encoder_pt2e_qat.py  test_cosmos_flow.py  (+198 more)
scripts/trainer/: __init__.py  diffusive_tokenizer_on_hyperspectral.py  fast_cloud_removal_trainer.py  hyper_image_diffusive_tokenizer_trainer.py  hyper_latent_change_detection_trainer.py  hyper_latent_classification_trainer.py  hyper_latent_denoise_trainer.py  hyper_latent_detection_trainer.py  hyper_latent_diffusive_cloud_removal_trainer.py  hyper_latent_pansharpening_trainer.py  hyper_latent_segmentation_trainer.py  hyper_latent_unmixing_trainer.py  hyperspectral_image_tokenizer_trainer.py  interface.py  meanflow_generative_trainer.py  mmdet_dota_trainer.py  mmdet_trainer.py  rgb_image_stereo_matching_trainer.py  single_hyper_image_change_detection_trainer.py  single_hyper_image_segmentation_trainer.py  us3d_depth_estimation_trainer.py
scripts/utils/: convert_oscd_tiff_to_npy_ordered.py  generate_leech_lattice.py  generate_leech_lattice_v2.py  verify_leech_lattice.py
src/: __init__.py  fill.py
src/data/: __init__.py  __init__.pyi  any_abands_preprocessing.py  augmentations.py  codecs.py  curriculums.py  cycled_dataset.py  dataloader_init_diff_banckends.py  generative_loader.py  hyperspectral_loader.py  litdata_hyperloader.py  mds_hyperloader.py  multimodal_loader.py  panshap_loader.py  pansharpening_loader.py  path_consts.py  tar_utils.py  unmixing_loader.py  utils.py  wids_collate_fns.py  wids_index.py  wids_samplers.py  window_slider.py
(+1733 files in other folders)
