[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "RS_tokenizer"
version = "0.1.0"
requires-python = ">=3.12, <=3.13"
dependencies = [
    "numpy>=1.21.0",
    "torch>=2.6.0",
    "transformers>=4.55.4",
    "timm>=1.0.19",
    "accelerate>=1.10.1",
    "torchvision",
    "matplotlib",
    "loguru",
    "typer",
    "omegaconf",
    "bitsandbytes",
    "heavyball",
    "fvcore",
    "jaxtyping",
    "torchmetrics",
    "tifffile",
    "webdataset",
    "wids",
    "kornia",
    "natsort",
    "safetensors",
    "natten",                      # Optional
    "lazy_loader",
    "rich_argparse",
    "omegaconf",
    "hydra-core",
    "segmentation_models_pytorch",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "ruff>=0.11", "mypy>=1.0", "ty>=0.0.1"]

[project.scripts]
wids-index = "data.wids_index:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
extend-exclude = [
    ".vscode",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".claude",
    "__pycache__",
    ".python-version",
    ".ruff.toml",
    "ruff.toml",
    "setup.cfg",
    "pyproject.toml",
]
exclude = [
    "src/stage2/generative/maskbit",
    "src/stage2/generative/Sana",
    "**/datasets/**",
    "data_local/",
    "data/",
    "src/stage2/generative/models/modules/deformable_attn/ops",
    # Submodules from .gitmodules
    "src/stage1/WeTok",
    "src/stage1/perception_models",
    "src/stage1/lora/LoRA-Pro",
    "src/stage1/discretization/bsq-vit",
    "src/stage1/discretization/vector-quantize-pytorch",
    "src/stage1/discretization/LightningDiT",
    "src/stage2/HyperSIGMA",
    "src/stage2/generative/HSIGene",
    "src/stage2/generative/maskbit",
    "src/stage2/generative/MeanFlow",
    "src/stage2/generative/modified-shortcut-models-pytorch",
    "src/stage2/generative/integrate-the-integrator",
    "src/stage1/MoEs/Mixture-of-Transformers",
    "src/stage1/MoEs/MoBA",
    "src/stage1/one_d_tokenizer/D-AR",
    "src/stage1/one_d_tokenizer/GigaTok",
    "src/stage1/one_d_tokenizer/SelftokTokenizer",
    "src/stage1/one_d_tokenizer/titok",
    "src/stage2/generative/shortcut_pytorch",
    "src/stage1/MoEs/mixture_of_recursions",
    "src/utilities/optim/dion",
    "src/stage2/detections/GT-HAD",
    "src/stage2/unmixing/traditional/HySUPP",
    "src/stage2/unmixing/traditional/Hyperspectral-Unmixing-Models",
    "src/stage2/generative/TiM",
]

[tool.ruff.format]
exclude = ["*.pyi"]

indent-style = "space"
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = 40
[tool.ruff.lint]
select = ["I", "E", "W"]
ignore = [
    "E402",    # module level import not at top of file
    "I001",    # import not at top of file
    "E731",    # lambda assigned to variable
    "E741",    # multiple statements on one line (semicolon)
    "E701",    # multiple statements on one line (colon)
    "E731",    # lambda
    "E501",    # line too long
    "E722",    # do not use bare except
    "PLR0913",
    "W291",    # trailing whitespace
    "W293",    # blank line at end of file
    "D103",
    "D202",
    "D403",
]

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["D"] # Disable all docstring-related rules

[tool.ruff.lint.pylint]
max-args = 20
max-bool-expr = 10
max-branches = 100
max-locals = 15
max-nested-blocks = 5
max-positional-args = 10
max-public-methods = 30
max-returns = 10
max-statements = 1000

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
files = ["src", "scripts"]
follow_imports = "skip"
warn_return_any = false
warn_unused_configs = true
python_version = "3.12"
allow_untyped_globals = true

[[tool.mypy.overrides]]
module = [
    "timm.*",
    "einops.*",
    "torch.*",
    "transformers.*",
    "loguru.*",
    "typer.*",
    "omegaconf.*",
    "accelerate.*",
    "heavyball.*",
    "fvcore.*",
    "jaxtyping.*",
    "torchmetrics.*",
    "tifffile.*",
    "webdataset.*",
    "wids.*",
    "torchvision.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.ty.rules]
index-out-of-bounds = "error"
unused-ignore-comment = "ignore"
redundant-cast = "ignore"
possibly-unbound-attribute = "error"
possibly-unbound-import = "error"

# [tool.ty.environment]
# root = ["./src", "./scripts"]

[tool.ty.src]
include = ["src", "scripts"]
exclude = ["data", "data_local", "tmp", "**/__pycache__/**"]
